--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,10 +24,10 @@ build:
   stage: build
   script:
     # Build the container image
-    - docker build -t "$CI_REGISTRY_IMAGE/gateway:latest" gateway/Dockerfile gateway
+    - docker build -t "$CI_REGISTRY_IMAGE/gateway:latest" -f gateway/Dockerfile gateway
     # Tag the container image from latest to the commit ref
     - docker tag "$CI_REGISTRY_IMAGE/gateway:latest" "$CI_REGISTRY_IMAGE/gateway:$CI_COMMIT_SHORT_SHA"
-    - docker build -t "$CI_REGISTRY_IMAGE/users:latest" users/Dockerfile users
+    - docker build -t "$CI_REGISTRY_IMAGE/users:latest" -f users/Dockerfile users
     - docker tag "$CI_REGISTRY_IMAGE/users:latest" "$CI_REGISTRY_IMAGE/users:$CI_COMMIT_SHORT_SHA"
-    - docker build -t "$CI_REGISTRY_IMAGE/orders:latest" orders/Dockerfile users
+    - docker build -t "$CI_REGISTRY_IMAGE/orders:latest" -f orders/Dockerfile users
     - docker tag "$CI_REGISTRY_IMAGE/orders:latest" "$CI_REGISTRY_IMAGE/orders:$CI_COMMIT_SHORT_SHA"
