--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ default:
 stages:
   - build
   - run
+  - push
 
 
 build:
@@ -28,10 +29,17 @@ build:
     - docker build -t "$CI_REGISTRY_IMAGE/gateway:latest" -f gateway/Dockerfile gateway
     # Tag the container image from latest to the commit ref
     - docker tag "$CI_REGISTRY_IMAGE/gateway:latest" "$CI_REGISTRY_IMAGE/gateway:$CI_COMMIT_SHORT_SHA"
+    - docker tag "$CI_REGISTRY_IMAGE/gateway:latest" "$CI_REGISTRY_IMAGE/gateway:$CI_COMMIT_REF_NAME"
+
     - docker build -t "$CI_REGISTRY_IMAGE/users:latest" -f users/Dockerfile users
     - docker tag "$CI_REGISTRY_IMAGE/users:latest" "$CI_REGISTRY_IMAGE/users:$CI_COMMIT_SHORT_SHA"
+    - docker tag "$CI_REGISTRY_IMAGE/users:latest" "$CI_REGISTRY_IMAGE/users:$CI_COMMIT_REF_NAME"
+
+
     - docker build -t "$CI_REGISTRY_IMAGE/orders:latest" -f orders/Dockerfile users
     - docker tag "$CI_REGISTRY_IMAGE/orders:latest" "$CI_REGISTRY_IMAGE/orders:$CI_COMMIT_SHORT_SHA"
+    - docker tag "$CI_REGISTRY_IMAGE/orders:latest" "$CI_REGISTRY_IMAGE/orders:$CI_COMMIT_REF_NAME"
+    
 
 run:
   stage: run
@@ -55,5 +63,28 @@ run:
     - docker rmi -f "$CI_REGISTRY_IMAGE/gateway:latest" "$CI_REGISTRY_IMAGE/gateway:$CI_COMMIT_SHORT_SHA"
     - docker rmi -f "$CI_REGISTRY_IMAGE/users:latest" "$CI_REGISTRY_IMAGE/users:$CI_COMMIT_SHORT_SHA"
     - docker rmi -f "$CI_REGISTRY_IMAGE/orders:latest" "$CI_REGISTRY_IMAGE/orders:$CI_COMMIT_SHORT_SHA"
+push:
+  stage: push
+  before_script:
+    # Show Docker daemon info (optional, good for debugging)
+    - docker info
+    # Login to GitLab Container Registry
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
+  script:
+    # Push gateway images
+    - docker push "$CI_REGISTRY_IMAGE/gateway:$CI_COMMIT_REF_NAME"     # dev branch tag
+    - docker push "$CI_REGISTRY_IMAGE/gateway:$CI_COMMIT_SHORT_SHA"    # immutable SHA tag
+    - if [ ! -z "$CI_COMMIT_TAG" ]; then docker push "$CI_REGISTRY_IMAGE/gateway:latest"; fi
+
+    # Push users images
+    - docker push "$CI_REGISTRY_IMAGE/users:$CI_COMMIT_REF_NAME"
+    - docker push "$CI_REGISTRY_IMAGE/users:$CI_COMMIT_SHORT_SHA"    # immutable SHA tag
+    - if [ ! -z "$CI_COMMIT_TAG" ]; then docker push "$CI_REGISTRY_IMAGE/users:latest"; fi
+
+    # Push orders images
+    - docker push "$CI_REGISTRY_IMAGE/orders:$CI_COMMIT_REF_NAME"
+    - docker push "$CI_REGISTRY_IMAGE/orders:$CI_COMMIT_SHORT_SHA"    # immutable SHA tag
+    - if [ ! -z "$CI_COMMIT_TAG" ]; then docker push "$CI_REGISTRY_IMAGE/orders:latest"; fi
+
 
 
