--- a/shopapp/templates/gateway.yml
+++ b/shopapp/templates/gateway.yml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: {{ .Values.gateway.image }}
+          image: "{{ .Values.gateway.image.repository }}:{{ .Values.gateway.image.tag }}"
           imagePullPolicy: {{ .Values.global.imagePullPolicy }}
           command: ["sh", "-c", "uvicorn main:app --reload --host 0.0.0.0"]
           ports:
