--- a/shopapp/templates/orders.yml
+++ b/shopapp/templates/orders.yml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: orders
-          image: {{ .Values.orders.image }}
+          image: "{{ .Values.orders.image.repository }}:{{ .Values.orders.image.tag }}"
           imagePullPolicy: {{ .Values.global.imagePullPolicy }}
           command: ["sh", "-c", "uvicorn main:app --reload --host 0.0.0.0"]
           ports:
