--- a/shopapp/values-dev.yml
+++ b/shopapp/values-dev.yml
@@ -5,7 +5,9 @@ global:
   imagePullPolicy: IfNotPresent
 
 gateway:
-  image: gateway-image:latest
+  image:
+    repository: gateway-image
+    tag: latest
   port: 8000
   servicePort: 30001
   nodeType: NodePort
@@ -16,7 +18,9 @@ gateway:
       memory: "512Mi"
 
 users:
-  image: users-image:latest
+  image:
+    repository: users-image
+    tag: latest
   port: 8000
   envFile: ../users/.env
   resources:
@@ -25,7 +29,9 @@ users:
       memory: "512Mi"
 
 orders:
-  image: orders-image:latest
+  image: 
+    repository: orders-image
+    tag: latest
   port: 8000
   envFile: ../orders/.env
   resources:
