--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,7 +122,7 @@ deploy_dev:
     # Deploy via Helm
     - sudo helm upgrade --install app shopapp/ \
         --values=values-dev.yml \
-        --namespace $NAMESPACE \
+        --namespace "$NAMESPACE" \
         --set gateway.image.repository="$CI_REGISTRY_IMAGE/gateway" \
         --set gateway.image.tag="$CI_COMMIT_SHORT_SHA" \
         --set users.image.repository="$CI_REGISTRY_IMAGE/users" \
@@ -130,6 +130,7 @@ deploy_dev:
         --set orders.image.repository="$CI_REGISTRY_IMAGE/orders" \
         --set orders.image.tag="$CI_COMMIT_SHORT_SHA" \
         --set gateway.servicePort="$NODEPORT_DEV"
+
 
 
 
