--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,7 +120,7 @@ deploy_dev:
     - cp shopapp/values-dev.yml values.yml
     - cat values.yml
     # Deploy via Helm
-    - sudo helm upgrade --install app shopapp/ --values=values-dev.yml --namespace "$NAMESPACE" --set gateway.image.repository="$CI_REGISTRY_IMAGE/gateway" --set gateway.image.tag="$CI_COMMIT_SHORT_SHA" --set users.image.repository="$CI_REGISTRY_IMAGE/users" --set users.image.tag="$CI_COMMIT_SHORT_SHA" --set orders.image.repository="$CI_REGISTRY_IMAGE/orders" --set orders.image.tag="$CI_COMMIT_SHORT_SHA" --set gateway.servicePort="$NODEPORT_DEV"
+    - sudo helm upgrade --install app shopapp/ --values=shopapp/values-dev.yml --namespace "$NAMESPACE" --set gateway.image.repository="$CI_REGISTRY_IMAGE/gateway" --set gateway.image.tag="$CI_COMMIT_SHORT_SHA" --set users.image.repository="$CI_REGISTRY_IMAGE/users" --set users.image.tag="$CI_COMMIT_SHORT_SHA" --set orders.image.repository="$CI_REGISTRY_IMAGE/orders" --set orders.image.tag="$CI_COMMIT_SHORT_SHA" --set gateway.servicePort="$NODEPORT_DEV"
 
 
 
