--- a/shopapp/templates/gateway.yml
+++ b/shopapp/templates/gateway.yml
@@ -17,6 +17,11 @@ spec:
         app: gateway
         env: {{ .Values.global.environment }}
     spec:
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+
       containers:
         - name: gateway
           image: "{{ .Values.gateway.image.repository }}:{{ .Values.gateway.image.tag }}"
