--- a/shopapp/values-dev.yml
+++ b/shopapp/values-dev.yml
@@ -3,6 +3,8 @@ global:
   namespace: dev
   replicaCount: 1
   imagePullPolicy: IfNotPresent
+  imagePullSecrets:
+    - name: regcred
 
 gateway:
   image:
