--- a/shopapp/templates/gateway.yml
+++ b/shopapp/templates/gateway.yml
@@ -19,8 +19,8 @@ spec:
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+{{ toYaml . | nindent 6 }}
+    {{- end }}
 
       containers:
         - name: gateway
