--- a/shopapp/values-prod.yml
+++ b/shopapp/values-prod.yml
@@ -3,6 +3,8 @@ global:
   namespace: prod
   replicaCount: 3
   imagePullPolicy: IfNotPresent
+  imagePullSecrets:
+    - name: regcred
 
 gateway:
   image: baranbartu/k-api-gateway:latest
