--- a/shopapp/values-staging.yml
+++ b/shopapp/values-staging.yml
@@ -3,6 +3,8 @@ global:
   namespace: staging
   replicaCount: 2
   imagePullPolicy: IfNotPresent
+  imagePullSecrets:
+    - name: regcred
 
 gateway:
   image: baranbartu/k-api-gateway:latest
