--- a/shopapp/values-staging.yml
+++ b/shopapp/values-staging.yml
@@ -7,7 +7,9 @@ global:
     - name: regcred
 
 gateway:
-  image: baranbartu/k-api-gateway:latest
+  mage:
+    repository: gateway-image
+    tag: latest
   port: 8000
   servicePort: 30003
   envFile: ../gateway/.env
@@ -17,7 +19,9 @@ gateway:
       memory: "1Gi"
 
 users:
-  image: baranbartu/k-users:latest
+  image:
+    repository: users-image
+    tag: latest
   port: 8000
   envFile: ../users/.env
   resources:
@@ -26,7 +30,9 @@ users:
       memory: "1Gi"
 
 orders:
-  image: baranbartu/k-orders:latest
+  image: 
+    repository: orders-image
+    tag: latest
   port: 8000
   envFile: ../orders/.env
   resources:
