--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ stages:
   - deploy_staging
   - deploy_prod
   - push_docker_hub
+  - cleanup
 
 
 build:
@@ -87,10 +88,7 @@ push:
     - docker push "$CI_REGISTRY_IMAGE/orders:$CI_COMMIT_REF_NAME"
     - docker push "$CI_REGISTRY_IMAGE/orders:$CI_COMMIT_SHORT_SHA"    # immutable SHA tag
     - if [ ! -z "$CI_COMMIT_TAG" ]; then docker push "$CI_REGISTRY_IMAGE/orders:latest"; fi
-    # Cleanup images
-    - docker rmi -f "$CI_REGISTRY_IMAGE/gateway:latest" "$CI_REGISTRY_IMAGE/gateway:$CI_COMMIT_SHORT_SHA"
-    - docker rmi -f "$CI_REGISTRY_IMAGE/users:latest" "$CI_REGISTRY_IMAGE/users:$CI_COMMIT_SHORT_SHA"
-    - docker rmi -f "$CI_REGISTRY_IMAGE/orders:latest" "$CI_REGISTRY_IMAGE/orders:$CI_COMMIT_SHORT_SHA"
+    
 
 stop_dev:
   stage: deploy_dev
@@ -159,7 +157,7 @@ deploy_qa:
     - rm -rf .kube
     - mkdir .kube
     - cat $KUBE_CONFIG > .kube/config
-    - sudo helm upgrade --install app shopapp/ --values=shopapp/values-qa.yml --namespace "$NAMESPACE" --set gateway.image.repository="$CI_REGISTRY_IMAGE/gateway" --set gateway.image.tag="$CI_COMMIT_SHORT_SHA" --set users.image.repository="$CI_REGISTRY_IMAGE/users" --set users.image.tag="$CI_COMMIT_SHORT_SHA" --set orders.image.repository="$CI_REGISTRY_IMAGE/orders" --set orders.image.tag="$CI_COMMIT_SHORT_SHA" --set gateway.servicePort="$NODEPORT_DEV"
+    - sudo helm upgrade --install app shopapp/ --values=shopapp/values-qa.yml --namespace "$NAMESPACE" --set gateway.image.repository="$CI_REGISTRY_IMAGE/gateway" --set gateway.image.tag="$CI_COMMIT_SHORT_SHA" --set users.image.repository="$CI_REGISTRY_IMAGE/users" --set users.image.tag="$CI_COMMIT_SHORT_SHA" --set orders.image.repository="$CI_REGISTRY_IMAGE/orders" --set orders.image.tag="$CI_COMMIT_SHORT_SHA" --set gateway.servicePort="$NODEPORT_QA"
 
 
 deploy_staging:
@@ -214,3 +212,11 @@ push_docker_hub:
     # Push orders
     - docker tag "$CI_REGISTRY_IMAGE/orders:$CI_COMMIT_SHORT_SHA" "$DOCKER_HUB_USERNAME/orders:latest"
     - docker push "$DOCKER_HUB_USERNAME/orders:latest"
+
+cleanup_images:
+  stage: cleanup
+  script:
+    - docker rmi -f "$CI_REGISTRY_IMAGE/gateway:latest" "$CI_REGISTRY_IMAGE/gateway:$CI_COMMIT_SHORT_SHA"
+    - docker rmi -f "$CI_REGISTRY_IMAGE/users:latest" "$CI_REGISTRY_IMAGE/users:$CI_COMMIT_SHORT_SHA"
+    - docker rmi -f "$CI_REGISTRY_IMAGE/orders:latest" "$CI_REGISTRY_IMAGE/orders:$CI_COMMIT_SHORT_SHA"
+  when: always
