--- a/shopapp/values-prod.yml
+++ b/shopapp/values-prod.yml
@@ -16,8 +16,8 @@ gateway:
   envFile: ../gateway/.env
   resources:
     limits:
-      cpu: "2"
-      memory: "2Gi"
+      cpu: "300m"
+      memory: "512Mi"
 
 users:
   image:
@@ -27,8 +27,8 @@ users:
   envFile: ../users/.env
   resources:
     limits:
-      cpu: "2"
-      memory: "2Gi"
+      cpu: "300m"
+      memory: "512Mi"
 
 orders:
   image: 
@@ -38,5 +38,5 @@ orders:
   envFile: ../orders/.env
   resources:
     limits:
-      cpu: "2"
-      memory: "2Gi"
+      cpu: "300m"
+      memory: "512Mi"
